--- a/main.html
+++ b/main.html
@@ -8,6 +8,64 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<div>
+			<label for="name">Name</label>
+			<input type="text"name=""id="name"placeholder="Name"required>
+		</div>
+		
+		<div>
+			<label for="email">Email</label>
+			<input type="email"name=""id="email"placeholder="Email"required>
+		</div>
+		
+		<div>
+			<label for="gender">Gender</label>
+			<label for="gender_m">Male</label>
+			<input type="radio"name="gender"id="gender_m"required><br>
+			<label for="gender_f">Female</label>
+			<input type="radio"name="gender"id="gender_f"required>
+		</div>
+
+		<div>
+			<label for="cars">Car Brands</label>
+			<select id="cars">
+			<option value="disabled selector">--Please choose an option--</option>
+				<option>BMW</option>
+				<option>Audi</option>
+				<option>Mercedez</option>
+			</select>
+		</div>
+
+		<div>
+			<label for="age">Age</label>
+			<input type="number"id="age"placehodler="Age"required>
+		</div>
+
+		<div>
+			<label for="dob">DOB</label>
+			<input type="date"id="dob"required>
+		</div>
+
+		<div>
+			<label for="tel">Phone Number</label>
+			<input type="tel"id="tel"placeholder="xxx-xxx-xxxx"required>
+		</div>
+
+		<div>
+			<label for="password">Password</label>
+			<input type="password"id="password"required>
+		</div>
+		
+		<div>
+			<label for="tod">I agree to the TOS</label>
+			<input type="checkbox"id="tod"required>
+		</div>
+		
+		<input type="button" value="Submit">
+	</form>
+
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
