--- a/main.html
+++ b/main.html
@@ -62,7 +62,8 @@
 			<input type="checkbox"id="tod"required>
 		</div>
 		
-		<input type="button" value="Submit">
+		<!--<input type="button" value="Submit">-->
+		<button type="submit">Submit</button>
 	</form>
 
 		
