--- a/main.html
+++ b/main.html
@@ -58,8 +58,8 @@
 		</div>
 		
 		<div>
-			<label for="tod">I agree to the TOS</label>
-			<input type="checkbox"id="tod"required>
+			<label for="tos">I agree to the TOS</label>
+			<input type="checkbox"id="tos"required>
 		</div>
 		
 		<!--<input type="button" value="Submit">-->
